<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Compose App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    
    <!-- Main screen strings -->
    <string name="header_title">My Food and\nEquipments</string>
    
    <!-- Product item strings -->
    <string name="product_name_placeholder">Product Name</string>
    <string name="product_price_placeholder">$55.31</string>
    <string name="product_expiry_date_placeholder">2024-12-31</string>
    <string name="product_warranty_placeholder">3 years</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- Sort options -->
    <string name="sort_name_asc">Sort A-Z</string>
    <string name="sort_name_desc">Sort Z-A</string>
    <string name="sort_price_asc">Price: Low to High</string>
    <string name="sort_price_desc">Price: High to Low</string>

    <!-- Product details -->
    <string name="expires_prefix">Expires: </string>
    <string name="warranty_prefix">Warranty: </string>
    <string name="not_available">N/A</string>
    <string name="years_suffix">years</string>
    <string name="no_products_available">No products available</string>

    <!-- Login -->
    <string name="button_login">Login</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="tag_content">tag content</string>
    <string name="cafe_image">Cafe Image</string>
    <string name="cafe_name">Cafe Name</string>
    <string name="location">location</string>
    <string name="location_icon">Location icon</string>
    <string name="location_location_location">Location, location, location</string>
    <string name="some">Some</string>
    <string name="outlet_icon">Outlet icon</string>
    <string name="outlets">Outlets</string>
    <string name="star">Star</string>
    <string name="wifi_icon">Wifi icon</string>
    <string name="excellent">Excellent</string>
    <string name="study_rating">Study Rating</string>
    <string name="wifi">Wifi</string>
    <string name="great">great</string>
</resources>