<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/foreground"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/cafeImageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/image_background"
            android:contentDescription="@string/cafe_image"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/cafe" />

        <TextView
            android:id="@+id/cafeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cafe_name"
            android:textColor="@color/primary_text"
            android:textSize="28sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cafeImageView" />

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_icon"
            android:contentDescription="@string/location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cafeNameTextView"
            app:tint="@color/primary_text" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/location_location_location"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/locationIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/locationIcon"
            app:layout_constraintTop_toTopOf="@id/locationIcon" />

        <LinearLayout
            android:id="@+id/featuresLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTextView">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:background="@drawable/features_background"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study_rating"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="9dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="2dp"
                        android:src="@drawable/star_icon"
                        android:contentDescription="@string/star"
                        app:tint="@color/background" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="2dp"
                        android:src="@drawable/star_icon"
                        android:contentDescription="@string/star"
                        app:tint="@color/background" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="2dp"
                        android:src="@drawable/star_icon"
                        android:contentDescription="@string/star"
                        app:tint="@color/background" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="2dp"
                        android:src="@drawable/star_icon"
                        android:contentDescription="@string/star"
                        app:tint="@color/background" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/star_icon"
                        android:contentDescription="@string/star"
                        app:tint="@color/background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:background="@drawable/features_background"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outlets"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/outlet_icon"
                        android:contentDescription="@string/outlet_icon"
                        app:tint="@color/primary_text" />

                    <TextView
                        android:background="@drawable/feature_tag_background"
                        android:layout_width="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="3dp"
                        android:layout_height="wrap_content"
                        android:text="@string/some"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:background="@drawable/features_background"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/wifi_icon"
                        android:contentDescription="@string/wifi_icon"
                        app:tint="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:background="@drawable/feature_tag_background"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="3dp"
                        android:text="@string/great"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>